enhancement(4134): Provide AxonTestFixtureExtension
This junit extension creates the AxonTestFixture based on the configured AxonTestFixtureProvider and handles lifecycle management